--- a/app/src/main/res/drawable/payment_selector.xml
+++ b/app/src/main/res/drawable/payment_selector.xml
@@ -1,17 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:state_enabled="true"
-        android:state_focused="true">
+        android:state_selected="false">
         <shape android:padding="10dp" android:shape="rectangle">
-            <solid android:color="@color/grey01"/>
-            <stroke android:width="3px" android:color="@color/main" />
+            <solid android:color="@color/white"/>
+            <stroke android:width="@dimen/_2sdp" android:color="@color/main" />
             <corners android:radius="@dimen/_10sdp" />
         </shape>
     </item>
-    <item android:state_enabled="true">
-        <shape android:padding="10dp"
-            android:shape="rectangle">
-            <solid android:color="@color/grey01" />
+    <item android:state_enabled="false" android:state_selected="true">
+        <shape android:padding="10dp" android:shape="rectangle">
+            <solid android:color="@color/white" />
+            <stroke android:width="@dimen/_2sdp" android:color="@color/white"/>
             <corners android:radius="@dimen/_10sdp" />
         </shape>
     </item>
