--- a/app/src/main/res/layout/fragment_address.xml
+++ b/app/src/main/res/layout/fragment_address.xml
@@ -158,21 +158,11 @@
         android:layout_marginTop="@dimen/_15sdp"
         android:layout_marginStart="@dimen/_21sdp"
         android:layout_marginEnd="@dimen/_22sdp"
-        android:background="@drawable/edittext_shipping"
+        android:background="@drawable/custom_spinner"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tvCountry" />
 
-    <ImageButton
-        android:id="@+id/imageButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:background="@android:color/transparent"
-        android:layout_marginEnd="@dimen/_20sdp"
-        android:src="@drawable/address_arrow_drop_down"
-        app:layout_constraintBottom_toBottomOf="@+id/spinner"
-        app:layout_constraintEnd_toEndOf="@+id/spinner"
-        app:layout_constraintTop_toTopOf="@+id/spinner" />
 
 
     <CheckBox
