--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,13 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources>
+<resources xmlns:ns1="http://schemas.android.com/tools"
+    xmlns:ns2="urn:oasis:names:tc:xliff:document:1.2">
     <color name="purple_200">#FFBB86FC</color>
     <color name="purple_500">#FF6200EE</color>
     <color name="purple_700">#FF3700B3</color>
+    <color name="main">#027335</color>
+
     <color name="teal_200">#FF03DAC5</color>
     <color name="teal_700">#FF018786</color>
     <color name="black">#000000</color>
     <color name="white">#FFFFFFFF</color>
-    <color name="main">#027335</color>
     <color name="shedow">#59087355</color>
     <color name="grey">#59D8EAE5</color>
     <color name="carview">#86C3D7</color>
@@ -27,6 +29,7 @@
     <color name="stepview_line_next">@color/soft</color>
     <color name="stepview_text_done">@color/tcstepper</color>
     <color name="stepview_text_next">@color/soft</color>
+    <color name="payment_icon_seleted">@color/main</color>
     <color name="stepview_text_selected">@color/tcstepper</color>
 
 
