--- a/app/src/main/res/layout/activity_shipping_address.xml
+++ b/app/src/main/res/layout/activity_shipping_address.xml
@@ -48,47 +48,8 @@
 
         </LinearLayout>
     </androidx.appcompat.widget.Toolbar>
-<!--
 
-    <params.com.stepview.StatusViewScroller
-        android:id="@+id/stepperView"
-        android:layout_width="wrap_content"
-        android:layout_height="@dimen/_86sdp"
-        android:foregroundGravity="center"
-        android:layout_marginStart="@dimen/_29sdp"
-        android:layout_marginEnd="@dimen/_28sdp"
-        android:paddingTop="@dimen/_10sdp"
-        android:paddingStart="@dimen/_5sdp"
-        android:paddingEnd="@dimen/_5sdp"
-        app:stepCount="3"
-        app:currentCount="2"
-        app:drawLabels="true"
-        android:entries="@array/status"
-        app:circleColorType="fillStroke"
-        app:lineWidth="@dimen/_2sdp"
-        app:lineColor="@color/main"
-        app:lineColorIncomplete="@color/soft"
-        app:lineColorCurrent="@color/main"
-        app:circleColor="@color/main"
-        app:circleColorCurrent="@color/white"
-        app:circleStrokeColor="@color/main"
-        app:lineLength="@dimen/_62sdp"
-        app:circleColorIncomplete="@color/grey02"
-        app:circleStrokeColorCurrent="@color/main"
-        app:circleStrokeColorIncomplete="@color/grey02"
-        app:circleStrokeWidth="@dimen/_3sdp"
-        app:statusTopMargin="@dimen/_12sdp"
-        app:statusFont="@font/poppins"
-        app:textColorStatus="#0A3C48"
-        app:incompleteDrawable="@drawable/ic_check_unseleted_circle"
-        app:currentDrawable="@drawable/ic_check__seleted_circle"
-       app:textSizeStatus="@dimen/_12sdp"
-        app:completeDrawable="@drawable/ic_check_done_circle"
-        app:layout_constraintTop_toBottomOf="@+id/saToolbar"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        tools:ignore="MissingConstraints" />
--->
+
     <com.shuhart.stepview.StepView
         android:id="@+id/stepView"
         android:layout_width="match_parent"
@@ -98,26 +59,44 @@
         android:paddingStart="@dimen/_13sdp"
         android:paddingEnd="@dimen/_12sdp"
         app:sv_stepsNumber="3"
-        app:sv_stepLineWidth="@dimen/_1sdp"
-        app:sv_doneTextColor="@color/stepview_text_done"
-        app:sv_selectedTextColor="@color/stepview_text_selected"
+        app:sv_nextStepCircleEnabled="true"
+        android:padding="16dp"
+        app:sv_selectedTextColor="@color/tcstepper"
+        app:sv_selectedCircleColor="@color/main"
+        app:sv_stepLineWidth="1dp"
         app:sv_nextTextColor="@color/stepview_text_next"
-        app:sv_doneStepLineColor="@color/stepview_line_done"
+        app:sv_nextCircleColor="@color/grey02"
         app:sv_nextStepLineColor="@color/stepview_line_next"
-        app:sv_doneStepMarkColor="@color/white"
         app:sv_doneCircleColor="@color/main"
-        app:sv_nextCircleColor="@color/soft"
+        app:sv_doneStepLineColor="@color/main"
+        app:sv_stepViewStyle="@style/StepView"
+        app:sv_doneStepMarkColor="@color/white"
+        app:sv_stepNumberTextSize="12sp"
         app:sv_animationType="Line"
         app:layout_constraintTop_toBottomOf="@+id/saToolbar"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        tools:ignore="MissingConstraints" />
+        app:layout_constraintEnd_toEndOf="parent"/>
 
+
+<!--    <com.vinay.stepview.HorizontalStepView
+        android:id="@+id/stepView"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/_86sdp"
+        android:layout_marginStart="@dimen/_34sdp"
+        android:layout_marginEnd="@dimen/_33sdp"
+        android:paddingStart="@dimen/_13sdp"
+        android:padding="@dimen/_10sdp"
+        app:flow_horizontalStyle="packed"
+        android:paddingEnd="@dimen/_12sdp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/saToolbar"
+        tools:ignore="MissingConstraints" />-->
     <FrameLayout
         android:id="@+id/fragmentHolder"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginTop="@dimen/_130sdp"
+        android:layout_marginTop="@dimen/_123sdp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
