--- a/app/src/main/res/layout/activity_shipping_address.xml
+++ b/app/src/main/res/layout/activity_shipping_address.xml
@@ -106,7 +106,7 @@
 
 
     <Button
-        android:id="@+id/fdNextBtn"
+        android:id="@+id/nextBtn"
         android:layout_width="match_parent"
         android:layout_height="@dimen/_46sdp"
         android:layout_marginStart="@dimen/_22sdp"
