--- a/app/src/main/res/drawable/custom_spinner.xml
+++ b/app/src/main/res/drawable/custom_spinner.xml
@@ -1,6 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:tools="http://schemas.android.com/tools" xmlns:android="http://schemas.android.com/apk/res/android">
-    <item>
+<item>
+    <layer-list>
+    <item android:state_enabled="true"
+        android:state_focused="true">
+        <shape android:padding="10dp" android:shape="rectangle">
+            <solid android:color="@color/grey01"/>
+            <stroke android:width="3px" android:color="@color/main" />
+            <corners android:radius="@dimen/_10sdp" />
+        </shape>
+    </item>
+    <item android:state_enabled="true">
+        <shape android:padding="10dp"
+            android:shape="rectangle">
+            <solid android:color="@color/grey01" />
+            <corners android:radius="@dimen/_10sdp" />
+        </shape>
+    </item>
+        <item android:drawable="@drawable/address_arrow_drop_down"
+            android:gravity="end" android:end="@dimen/_10sdp" tools:targetApi="m" />
+
+
+    </layer-list>
+</item>
+</selector>
+   <!-- <item>
         <layer-list>
             <item android:state_enabled="true"
                 android:state_focused="true">
@@ -21,5 +45,4 @@
                 android:gravity="end" android:end="@dimen/_10sdp" tools:targetApi="m" />
 
         </layer-list>
-    </item>
-</selector>
+    </item>-->
