--- a/app/src/main/res/layout/fragment_address.xml
+++ b/app/src/main/res/layout/fragment_address.xml
@@ -149,12 +149,13 @@
 
 
     <Spinner
-        android:id="@+id/spinner"
+        android:id="@+id/faSpinner"
         android:layout_width="match_parent"
         android:layout_height="@dimen/_40sdp"
         android:layout_marginTop="@dimen/_15sdp"
         android:layout_marginStart="@dimen/_21sdp"
         android:layout_marginEnd="@dimen/_22sdp"
+        android:entries="@array/countryName"
         android:background="@drawable/custom_spinner"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -175,7 +176,7 @@
         android:textColor="@color/black"
         android:textSize="@dimen/_10sdp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/spinner"
+        app:layout_constraintTop_toBottomOf="@+id/faSpinner"
         tools:ignore="HardcodedText" />
 <!--
 
