--- a/app/src/main/res/layout/activity_products.xml
+++ b/app/src/main/res/layout/activity_products.xml
@@ -68,7 +68,7 @@
         android:fontFamily="@font/lato"
         android:hint="@string/search_bar_hint"
         android:imeOptions="actionSearch"
-        android:inputType="text"
+        android:inputType="textAutoComplete"
         android:lineHeight="@dimen/_15sdp"
         android:padding="@dimen/_5sdp"
         android:paddingStart="@dimen/_10sdp"
