--- a/app/src/main/res/layout/fragment_details.xml
+++ b/app/src/main/res/layout/fragment_details.xml
@@ -14,7 +14,7 @@
         android:layout_marginStart="@dimen/_22sdp"
         android:layout_marginTop="@dimen/_25sdp"
         android:fontFamily="@font/poppins"
-        android:text="Full Name"
+        android:text="@string/full_name"
         android:textColor="@color/black"
         android:textFontWeight="500"
         android:textSize="@dimen/_14sdp"
@@ -77,7 +77,7 @@
         android:background="@drawable/edittext_shipping"
         android:focusable="auto"
         android:fontFamily="@font/lato"
-        android:hint="Enter your Email"
+        android:hint="@string/enter_your_email"
         android:inputType="textEmailAddress"
         android:lineHeight="@dimen/_15sdp"
         android:padding="@dimen/_5sdp"
@@ -98,7 +98,7 @@
         android:fontFamily="@font/poppins"
         android:layout_marginTop="@dimen/_25sdp"
         android:layout_marginStart="@dimen/_21sdp"
-        android:text="Phone"
+        android:text="@string/phone"
         android:textStyle="bold"
         android:textColor="@color/black"
         android:textFontWeight="500"
@@ -119,7 +119,7 @@
         android:ems="12"
         android:focusable="auto"
         android:fontFamily="@font/lato"
-        android:hint="Enter your phone number"
+        android:hint="@string/enter_your_phone_number"
         android:inputType="phone"
         android:lineHeight="@dimen/_15sdp"
         android:padding="@dimen/_5sdp"
