--- a/app/src/main/res/layout/fragment_payment.xml
+++ b/app/src/main/res/layout/fragment_payment.xml
@@ -312,7 +312,6 @@
                 android:ems="25"
                 android:maxLength="25"
                 android:inputType="text"
-                android:text=""
                 android:background="@drawable/edittext_selector"
                 android:fontFamily="@font/lato"
                 android:hint="@string/enter_your_holder_name"
@@ -508,14 +507,15 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="@dimen/_22sdp"
                 android:layout_marginTop="@dimen/_15sdp"
-                android:checked="true"
+                android:onClick="onCheckboxClicked"
                 android:fontFamily="@font/poppins"
                 android:text="@string/save_this_card"
                 android:textAlignment="center"
                 android:textColor="@color/black"
                 android:textSize="@dimen/_10sdp"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/spinner" />
+                app:layout_constraintTop_toBottomOf="@+id/spinner"
+                tools:ignore="OnClick,UsingOnClickInXml" />
 
             <Button
                 android:id="@+id/btnPayment"
