--- a/app/src/main/res/layout/activity_search_filter.xml
+++ b/app/src/main/res/layout/activity_search_filter.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".SearchFilterActivity">
+    tools:context=".Activity.SearchFilterActivity">
 
    <!-- <com.google.android.material.appbar.AppBarLayout
         android:id="@+id/sfAppBarLayout"
