--- a/app/src/main/res/layout/activity_sign_in.xml
+++ b/app/src/main/res/layout/activity_sign_in.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/main"
-    tools:context=".login.SignInActivity">
+    tools:context=".Activity.SignInActivity">
 
 
     <TextView
@@ -205,7 +205,7 @@
             app:layout_constraintTop_toTopOf="@+id/signinBtn" />
 -->
         <CheckBox
-            android:id="@+id/checkBox"
+            android:id="@+id/cbSignin"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/_16sdp"
@@ -224,7 +224,6 @@
             android:id="@+id/textView6"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-
             android:clickable="true"
             android:padding="@dimen/_2sdp"
             android:text="@string/forgot_password"
@@ -234,9 +233,9 @@
             android:textSize="@dimen/_10sdp"
             android:textStyle="normal|bold"
             android:translationY="@dimen/_2sdp"
-            app:layout_constraintBottom_toBottomOf="@+id/checkBox"
+            app:layout_constraintBottom_toBottomOf="@+id/cbSignin"
             app:layout_constraintEnd_toEndOf="@+id/signinBtn"
-            app:layout_constraintTop_toTopOf="@+id/checkBox"
+            app:layout_constraintTop_toTopOf="@+id/cbSignin"
             android:focusable="true" />
 
         <TextView
@@ -249,7 +248,7 @@
             android:textSize="@dimen/_10sdp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/checkBox" />
+            app:layout_constraintTop_toBottomOf="@+id/cbSignin" />
 
         <Button
             android:id="@+id/btn_signup"
