--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -10,7 +10,7 @@
     app:layout_constraintBottom_toBottomOf="parent"
     app:layout_constraintLeft_toLeftOf="parent"
     app:layout_constraintRight_toRightOf="parent"
-    tools:context=".login.SignInActivity">
+    tools:context=".Activity.SignInActivity">
 
     <TextView
         android:id="@+id/textView"
@@ -143,7 +143,7 @@
             android:ems="50"
             android:fontFamily="@font/lato"
             android:hint="@string/signup_email"
-            android:inputType="textPersonName"
+            android:inputType="textEmailAddress"
             android:paddingStart="@dimen/_13sdp"
             android:textColor=" #293041"
             android:textColorHint="#617D8FAB"
