--- a/app/src/main/res/layout/fragment_address.xml
+++ b/app/src/main/res/layout/fragment_address.xml
@@ -159,7 +159,9 @@
         android:background="@drawable/custom_spinner"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tvCountry" />
+        app:layout_constraintTop_toBottomOf="@+id/tvCountry" >
+        <requestFocus/>
+    </Spinner>
 
 
 
