--- a/app/src/main/res/layout/fragment_payment.xml
+++ b/app/src/main/res/layout/fragment_payment.xml
@@ -498,7 +498,11 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/tvCountry"
-                tools:ignore="RtlSymmetry" />
+                tools:ignore="RtlSymmetry">
+                <requestFocus/>
+
+            </Spinner>
+
 
 
             <CheckBox
